# ai-web-scraper-lead-generator

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
data/: websites.txt
src/leadgen/: __init__.py  cli.py  config.py  database.py  exporter.py  extractor.py  models.py  pipeline.py  repository.py  scraper.py
tests/: test_scraper.py
